[gd_scene load_steps=6 format=2]

[ext_resource path="res://MinedMapsTexture_2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/map_control.gd" type="Script" id=2]
[ext_resource path="res://MinedMapsIcon256.png" type="Texture" id=3]
[ext_resource path="res://Maps.tscn" type="PackedScene" id=4]
[ext_resource path="res://OmniLight2D.gd" type="Script" id=5]

[node name="Node2D" type="Node2D"]

[node name="Controls" type="Node" parent="."]
script = ExtResource( 2 )

[node name="OmniLight" type="Light2D" parent="Controls"]
position = Vector2( 510.5, 298 )
scale = Vector2( 1.031, 1.01667 )
texture = ExtResource( 3 )
energy = 2.21
script = ExtResource( 5 )

[node name="TexturePlateTest" type="Sprite" parent="Controls"]
position = Vector2( 510.5, 298 )
scale = Vector2( 1.031, 1.01667 )
texture = ExtResource( 1 )

[node name="Maps" parent="Controls" instance=ExtResource( 4 )]
