[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Material/Mined Maps.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/map_3.gd" type="Script" id=3]
[ext_resource path="res://Scripts/map_control.gd" type="Script" id=4]
[ext_resource path="res://Scripts/OmnilLight.gd" type="Script" id=5]
[ext_resource path="res://fonts/Pixel_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://XandY.gd" type="Script" id=7]
[ext_resource path="res://Label_update.gd" type="Script" id=8]
[ext_resource path="res://default_env.tres" type="Environment" id=9]
[ext_resource path="res://Scripts/map_1.gd" type="Script" id=10]
[ext_resource path="res://Scripts/map_4.gd" type="Script" id=11]
[ext_resource path="res://Scripts/map_5.gd" type="Script" id=12]
[ext_resource path="res://Scripts/map_2.gd" type="Script" id=13]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Controls/LCD/Viewport")

[node name="Spatial" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.242071, -0.135235, 1.43266 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.994098, 0.108485, 0, -0.108485, 0.994098, 0, 3.10389, 4.7528 )
environment = ExtResource( 9 )

[node name="Controls" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Light" type="DirectionalLight" parent="Controls"]
transform = Transform( 1, 0, 0, 0, -1, 0, 0, 0, -1, -0.74318, 0.193763, -2.26131 )
light_color = Color( 0.270588, 0.435294, 0.694118, 1 )
light_energy = 0.275
light_specular = 0.206
directional_shadow_max_distance = 0.8
script = ExtResource( 5 )

[node name="OmniLight" type="OmniLight" parent="Controls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.264341, -0.0831037, -3.88529 )
light_color = Color( 0.882353, 0.866667, 0.729412, 1 )
light_energy = 2.0
light_specular = 7.252
omni_range = 7.36753
script = ExtResource( 5 )

[node name="UI_Title" type="Control" parent="Controls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -509.0
margin_top = -290.0
margin_right = 511.0
margin_bottom = 299.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/UI_Title"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = 24.0
margin_right = -775.0
margin_bottom = -12.0

[node name="Label" type="Label" parent="Controls/UI_Title/VBoxContainer"]
margin_right = 222.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 1 )
text = "Welcome the Mined Map
use the arrow keys
to navigate the 
MINED enjoy "
valign = 1

[node name="XandY" type="Label" parent="Controls/UI_Title/VBoxContainer"]
margin_top = 161.0
margin_right = 222.0
margin_bottom = 175.0
text = "X : 0 Y: 0"
valign = 1
script = ExtResource( 7 )

[node name="Label2" type="Label" parent="Controls/UI_Title/VBoxContainer"]
visible = false
margin_top = 179.0
margin_right = 222.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 1 )
text = "Press Q to cheat 
and show Map
"
autowrap = true
script = ExtResource( 8 )

[node name="LCD" type="Spatial" parent="Controls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.376044, 5.41178, -1.13316 )

[node name="Viewport" type="Viewport" parent="Controls/LCD"]
size = Vector2( 500, 120 )
transparent_bg = true

[node name="LCDscreen" type="Label" parent="Controls/LCD/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 14.0
margin_right = -31.0
margin_bottom = -32.0
custom_colors/font_color = Color( 0.854902, 0.388235, 0.109804, 1 )
custom_fonts/font = ExtResource( 6 )
text = "WELCOME TO MINED MAPS	"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="Sprite3D" type="Sprite3D" parent="Controls/LCD"]
transform = Transform( 1.51837, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.507563, -0.802194 )
flip_v = true
texture = SubResource( 1 )

[node name="Maps" type="Control" parent="Controls"]

[node name="Map1" type="Node" parent="Controls/Maps"]
script = ExtResource( 10 )

[node name="Map2" type="Node" parent="Controls/Maps"]
script = ExtResource( 13 )

[node name="Map3" type="Control" parent="Controls/Maps"]
script = ExtResource( 3 )

[node name="Map4" type="Control" parent="Controls/Maps"]
script = ExtResource( 11 )

[node name="Map5" type="Node" parent="Controls/Maps"]
script = ExtResource( 12 )

[node name="Mined Maps" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.014066, -0.38113, -5.91636 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.207997, 0.978129, 0, -0.978129, 0.207997, 0, 7.623, 6.25647 )
light_color = Color( 0.917647, 0.988235, 0.988235, 1 )
light_energy = 0.4
